lowercase package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "wevrem/wCommon",
+	"name": "wevrem/wcommon",
 	"description": "Useful PHP functions and classes",
 	"type": "library",
 	"license": "MIT",
